# Strongtalk

./: .travis.yml  BUILD  CMakeLists.txt  README.jirkadanek.md  README.md  clone_repo.sh  contributorLicenses.html  delete_repo.sh  gtest.BUILD  precompile_headers.sh
build.linux/: makefile  makefile-macros.incl  makefile.incl
build.osx/strongtalk/strongtalk.xcodeproj/: project.pbxproj
ci/: coverity.cpp
easyunit/easyunit/: test.h  testprinter.h
easyunit/src/: simplestring.cpp
test/compiler/: compiler_tests.cpp
test/integration/: main.cc
test/integration/compiler/: node_tests.cpp
test/integration/interpreter/: hCodeBufferTests.cpp  interpretedIC_tests.cpp  missingMethodBuilderTest.cpp
test/integration/memory/: association_klass_tests.cpp  blockClosureKlassTests.cpp  byteArrayKlassTests.cpp  doublOopKlassTests.cpp  doubleByteArrayTests.cpp  doubleValueArrayTests.cpp  memOopAllocationTests.cpp  memOopKlassTests.cpp  mixinKlassTests.cpp  objArrayKlassTests.cpp  oldGeneration.cpp  old_space_tests.cpp  processKlassTests.cpp  proxyKlassTests.cpp  universe_tests.cpp  vframeKlassTests.cpp
test/integration/prims/: alienIntegerCallout2Tests.cpp  alienIntegerCallout3Tests.cpp  alienIntegerCallout4Tests.cpp  alienIntegerCallout5Tests.cpp  alienIntegerCallout6Tests.cpp  alienIntegerCallout7Tests.cpp  alienIntegerCalloutWithArgumentsTests.cpp  behaviorPrimsSuperclassTests.cpp  behaviorPrimsTests.cpp  dbyteArrayPrimsTests.cpp  directAlienPrimsTests.cpp  indirectAlienPrimsTests.cpp  integerOpsTests.cpp  oop_prims.cpp  (+6 more)
test/main/: main.cpp
test/memory/: contextKlassTests.cpp
test/prims/: alienIntegerCallout1Tests.cpp  alienIntegerCallout2Tests.cpp  alienIntegerCallout3Tests.cpp  alienIntegerCallout4Tests.cpp  alienIntegerCallout5Tests.cpp  alienIntegerCallout6Tests.cpp  alienIntegerCallout7Tests.cpp  alienIntegerCalloutWithArgumentsTests.cpp
test/unit/: longInt.cpp  lprintf_test.cpp  virtualspace.cpp
vm/asm/: assembler.cpp  assembler.hpp  location.cpp  location.hpp  x86_mapping.hpp
vm/code/: codeTable.hpp  compiledIC.cpp  compiledIC.hpp  compiledPIC.cpp  compiledPIC.hpp  inliningdb.cpp  inliningdb.hpp  jumpTable.cpp  jumpTable.hpp  locations.cpp  locations.hpp  mapConformance.cpp  mapConformance.hpp  nameDesc.hpp  nativeInstruction.hpp  ncode.cpp  ncode.hpp  nmethod.cpp  nmethod.hpp  nmethodScopes.cpp  nmethodScopes.hpp  pcDesc.cpp  pcDesc.hpp  pregMapping.cpp  pregMapping.hpp  registerMask.hpp  relocInfo.cpp  relocInfo.hpp  scopeDesc.cpp  scopeDesc.hpp  scopeDescRecorder.cpp  scopeDescRecorder.hpp  stubRoutines.cpp  stubRoutines.hpp  zone.cpp  zone.hpp  zoneHeap.cpp  zoneHeap.hpp
vm/compiler/: basicBlock.cpp  basicBlock.hpp  bitVector.cpp  bitVector.hpp  codeGenerator.cpp  codeGenerator.hpp  compUtils.cpp  compUtils.hpp  compileTimeClosure.cpp  compileTimeClosure.hpp  compiler.hpp  costModel.hpp  defUse.cpp  defUse.hpp  expr.cpp  expr.hpp  inliner.cpp  inliner.hpp  intervalInfo.hpp  loopOpt.cpp  loopOpt.hpp  node.cpp  node.hpp  nodeBuilder.cpp  nodeBuilder.hpp  oldCodeGenerator.cpp  oldCodeGenerator.hpp  opcode.cpp  opcode.hpp  preg.cpp  preg.hpp  primInliner.cpp  primInliner.hpp  regAlloc.hpp  rscope.cpp  rscope.hpp  scope.cpp  scope.hpp  slist.cpp  slist.hpp  (+1 more)
vm/disasm/: disassembler.cpp
vm/interpreter/: bytecodes.hpp  codeIterator.hpp  dispatchTable.hpp  floats.cpp  floats.hpp  hCodeBuffer.hpp  ic_iterator.cpp  ic_iterator.hpp  interpretedIC.cpp  interpretedIC.hpp  interpreter.cpp  interpreter.hpp  interpreterStatistics.hpp  methodIterator.hpp  methodPrinter.cpp  methodPrinter.hpp  missingMethodBuilder.hpp  prettyPrinter.cpp  prettyPrinter.hpp
vm/lookup/: key.hpp  lookupCache.cpp  lookupCache.hpp  lookupTypes.hpp
vm/memory/: ageTable.cpp  ageTable.hpp  allocation.cpp  allocation.hpp  debugPrintable.cpp  debugPrintable.hpp  error.cpp  error.hpp  generation.hpp  generation.inline.hpp  handle.hpp  iterator.hpp  markSweep.cpp  markSweep.hpp  oopFactory.cpp  oopFactory.hpp  printlayout.cpp  printlayout.hpp  rSet.cpp  rSet.hpp  reflection.cpp  reflection.hpp  snapshot.hpp  space.cpp  space.hpp  spaceSize.hpp  symbolTable.cpp  symbolTable.hpp  universe.cpp  universe.hpp  universe.store.hpp  universe_more.cpp  util.cpp  util.hpp  vmSymbols.hpp
vm/oops/: associationKlass.hpp  associationOop.hpp  blockKlass.hpp  blockOop.hpp  blockOop.inline.hpp  byteArrayKlass.cpp  byteArrayKlass.hpp  byteArrayOop.cpp  byteArrayOop.hpp  dByteArrayKlass.hpp  dByteArrayOop.cpp  dByteArrayOop.hpp  dValueArrayKlass.hpp  dValueArrayOop.hpp  doubleKlass.hpp  doubleOop.hpp  klass.cpp  klass.hpp  klassKlass.hpp  klassOop.hpp  markOop.hpp  memOop.hpp  memOop.inline.hpp  memOopKlass.hpp  methodKlass.cpp  methodKlass.hpp  methodOop.cpp  methodOop.hpp  mixinKlass.hpp  mixinOop.hpp  objArrayKlass.hpp  objArrayOop.cpp  objArrayOop.hpp  oop.hpp  oop.inline.hpp  processKlass.hpp  processOop.hpp  proxyKlass.hpp  proxyOop.hpp  smiKlass.hpp  (+8 more)
vm/prims/: behavior_prims_gen.cpp  block_prims_gen.cpp  byteArray_prims.cpp  callBack_prims.cpp  debug_prims.cpp  dll.hpp  double_prims.cpp  generatedPrimitives.cpp  generatedPrimitives.hpp  integerOps.cpp  integerOps.hpp  objArray_prims.cpp  prim.cpp  prim.hpp  prim_impl.hpp  proxy_prims.cpp  smi_prims.cpp  system_prims.cpp
vm/recompiler/: recompile.cpp  rframe.hpp
vm/runtime/: abort.hpp  arguments.cpp  arguments.hpp  bootstrap.hpp  callBack.hpp  debug.cpp  debug.hpp  delta.hpp  disclaimer.cpp  disclaimer.hpp  evaluator.cpp  evaluator.hpp  fprofiler.cpp  fprofiler.hpp  frame.cpp  frame.hpp  main.cpp  os.hpp  os_darwin.cpp  os_linux.cpp  os_nt.cpp  preemption.hpp  process.cpp  process.hpp  runtime.hpp  savedRegisters.cpp  shell.cpp  shell.hpp  stackChunk.cpp  stackChunk.hpp  sweeper.cpp  sweeper.hpp  systemAverage.cpp  systemAverage.hpp  task.hpp  tempDecoder.hpp  timer.cpp  timer.hpp  uncommonBranch.cpp  uncommonBranch.hpp  (+3 more)
vm/topIncludes/: asserts.hpp  bits.hpp  config.hpp  macros.hpp  std_includes.hpp  tag.hpp  top.hpp  types.hpp
vm/utilities/: eventLog.cpp  eventLog.hpp  growableArray.hpp  longInt.hpp  lprintf.cpp  lprintf.hpp  ostream.cpp  ostream.hpp
(+3 files in other folders)
